--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "dependencies": {
     "openai": "^3.1.0",
     "serverless-dotenv-plugin": "^4.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.4"
   }
 }
