adds validation to completions endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -9,18 +9,19 @@ plugins:
 
 functions:
   animalnames:
-    description: "The animal names hello world snippet"
+    description: "Simple example showing use of the OpenAI API for the animal names getting started tutorial"
     runtime: nodejs14.x
     handler: lambdas/node/animalnames.handler
     events:
       - httpApi:
-          path: /api/openai/animalnames
           method: get
+          path: /api/openai/animalnames
   completions:
     description: "Calls the OpenAI API completions endpoint which uses the GPT-3 (Generative Pre-trained Transformer 3) model to generate text completions"
     runtime: nodejs14.x
     handler: lambdas/node/completions.handler
     events:
       - httpApi:
-          path: /api/openai/completions
           method: get
+          path: /api/openai/completions
+
