--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/ccabanero/learn-openai-api#readme",
   "dependencies": {
+    "jest": "^29.3.1",
     "openai": "^3.1.0",
-    "serverless-dotenv-plugin": "^4.0.2"
+    "serverless-dotenv-plugin": "^4.0.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
