--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning how to create API endpoints with OpenAI + serverless framework",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd -f .env.test.local jest --watch --runInBand"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/ccabanero/learn-openai-api#readme",
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "jest": "^29.3.1",
     "openai": "^3.1.0",
     "serverless-dotenv-plugin": "^4.0.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.1.4"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
