--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning how to create API endpoints with OpenAI + serverless framework",
   "main": "handler.js",
   "scripts": {
-    "test": "env-cmd -f .env.test.local jest --watch --runInBand"
+    "test": "env-cmd -f .env.test.local jest --watch --runInBand --coverage"
   },
   "repository": {
     "type": "git",
